--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^2.0.0",
